src/test/deca/syntax/invalid/decl_float_overflow.deca
//  Description :
//            Déclaration d'un flottant trop grand
//
// Résultat:
//literal values cannot be infinite
//
{
    float x = 123456789123456789123456789123456789123456789.123456789;
}